--- a/src/index.css
+++ b/src/index.css
@@ -30,30 +30,23 @@ body {
   background-color: #f5f5f5;
 }
 
-.slider {
+/* styles.css */
+#small-range::-webkit-slider-thumb {
   -webkit-appearance: none;
   appearance: none;
-  width: 100%;
-  height: 10px;
-  background: #9f7aea;
-  border-radius: 5px;
-  outline: none;
-  opacity: 0.7;
-  transition: opacity 0.2s;
-  position: relative;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: #9f7aea; /* Purple color for the thumb */
+  cursor: pointer;
 }
 
-.slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 20px; /* Set the width of the thumb */
-  height: 20px; /* Set the height of the thumb */
-  background-color: #9f7aea; /* Purple color */
-  border-radius: 50%; /* Round shape */
+#small-range::-moz-range-thumb {
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  background-color: #9f7aea; /* Purple color for the thumb */
   cursor: pointer;
-  position: absolute;
-  top: -5px; /* Move the thumb up to position it above the bar */
-  transform: translateX(-50%); /* Center the thumb above the track */
 }
 
 .custom-scrollbar::-webkit-scrollbar {
