--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,10 @@ body {
   border: 1px solid #c8bcf6;
 }
 
+.secondary-border-color {
+  border: 1px solid black;
+}
+
 .secondary-color {
   color: #f5f5f5;
 }
